test/Fail/SmartRewriteInfiniteBranchLoop2.err
SmartRewriteInfiniteBranchLoop2.agda:25.1-8: warning: -W[no]RewriteLHSSubterm
_ : x .app 0 ≡ b x  is not a legal rewrite rule, since the
left-hand side of a rewrite rule introduced by with/rewrite is a
structural subterm of the right-hand side (which can cause
non-termination)
when checking that the pattern refl has type x .app 0 ≡ b x

SmartRewriteInfiniteBranchLoop2.agda:25.1-8: error: [InvalidatedLocalRewriteRule]
Local rewrite rule invalidated after a pattern-match
when checking that the pattern refl has type x .app 0 ≡ b x
